--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ body {
   margin-bottom: 12px;
 }
 
-.editor-panel .options {
+.editor-panel .options,
+.controls {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -65,6 +66,121 @@ body {
   border: 1px solid #aaa;
 }
 
+.editor-panel button:hover {
+  background: #f5f5f5;
+}
+
 .editor-panel .filter button {
-  width: calc(100% / 2 -4px);
+  width: calc(100% / 2 - 4px);
+}
+
+.filter button.active {
+  color: #fff;
+  background: #5372f0;
+  border-color: #5372f0;
+}
+
+.filter .slider {
+  margin-top: 12px;
+}
+
+.filter .slider .filter-info {
+  display: flex;
+  color: #464646;
+  font-size: 14px;
+  justify-content: space-between;
+}
+
+.filter .slider input {
+  width: 100%;
+  height: 5px;
+  accent-color: #5372f0;
+}
+
+.editor-panel .rotate {
+  margin-top: 17px;
+}
+
+.editor-panel .rotate button {
+  width: calc(100% / 4 - 3px);
+}
+
+.rotate button:nth-child(3),
+.rotate button:nth-child(4) {
+  font-size: 18px;
+}
+
+.wrapper .preview-img {
+  /* width: 80%; */
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.preview-img img {
+  max-width: 490px;
+  max-height: 335px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.controls button {
+  padding: 11px;
+  cursor: pointer;
+  color: #fff;
+  background: #fff;
+  font-size: 14px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
+.controls .reset-filter {
+  color: #6c757d;
+  border: 1px solid #6c757d;
+}
+
+.controls .choose-img {
+  background: #6c757d;
+  border: 1px solid #6c757d;
+}
+
+.controls .save-img {
+  margin-left: 5px;
+  background: #5372f0;
+  border: 1px solid #5372f0;
+}
+
+@media screen and (max-width: 760px) {
+  .container {
+    padding: 25px;
+  }
+
+  .container .wrapper {
+    flex-wrap: wrap-reverse;
+  }
+
+  .wrapper .editor-panel {
+    width: 100%;
+  }
+
+  .wrapper .preview-img {
+    width: 100%;
+    margin: 0 0 15px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .controls button {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .controls .row {
+    width: 100%;
+  }
+
+  .controls .row .save-img {
+    margin-left: 0px;
+  }
 }
