--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
+.container.disable :where(.editor-panel, .reset-filter, .save-img) {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
 .container h2 {
   font-size: 22px;
   font-weight: 500;
@@ -114,7 +119,9 @@ body {
   /* width: 80%; */
   flex-grow: 1;
   display: flex;
+  overflow: hidden;
   align-items: center;
+  justify-content: center;
   margin-left: 20px;
 }
 
